--- a/index.html
+++ b/index.html
@@ -66,5 +66,13 @@
        
         </div>
 
+        <div class="card">
+            <img src="" alt="Avatar" style="width:100%">
+            <div class="container">
+              <h4><b>nitin</b></h4>
+              <p>Architect & Engineer</p>
+            </div>
+          </div>
+
 </body>
 </html>
